# fun-coding

./: CHANGELOG.md  Fromsas-projects.cabal  Untitled.ipynb
.ipynb_checkpoints/: cellularAutomata-checkpoint.hs
app/.ipynb_checkpoints/: Main-checkpoint.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
