cabal-version:      2.4
name:               Fromsas-projects
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: sdfadf

-- A longer description of the package.
-- description: asfasdf

-- A URL where users can report bugs.
-- bug-reports: adfs.asdf

-- The license under which the package is released.
-- license:
author:             FH
maintainer:         fromsahera28@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Fromsas-projects
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                      ,random
                      ,mtl
                      ,process
    hs-source-dirs:   app
    default-language: Haskell2010
